Fixed alignment again? hopefully it can fit longer names

--- a/down/styles/main.css
+++ b/down/styles/main.css
@@ -86,7 +86,6 @@ textarea {
 }
 .profilePic{
   display: inline-block;
-  margin-right: 30px;
   width:200px;
 }
 .eventText{
